[tool.poetry]
name = "file_sorter"
version = "0.1.0"
description = "File sorter"
authors = ["Vitalii Shishorin <moskrc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
file_sorter = "file_sorter:sort"