[tool.poetry]
name = "simple_file_sorter"
version = "0.1.1"
description = "Simple File Sorter"
authors = ["Vitalii Shishorin <moskrc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simple_file_sorter = "simple_file_sorter:sort"