[tool.poetry]
name = "extsorter"
version = "0.1.4"
description = "File Sorter"
authors = ["Vitalii Shishorin <moskrc@gmail.com>"]
readme = "README.md"
repository = "https://github.com/moskrc/filesorter"
keywords = ["sort", "file_sorter", "file", "sorter", "extsorter", "ext_sorter"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extsorter = "extsorter.core:sort"
